2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: Fixed several bugs in the argument replacements in
	massage_gs_commandline.

2009-02-09  Lars Uebernickel <larsuebernickel@gmx.de>

	* fileconverter.h, foomaticrip.c, renderer.c, util.c: Made
	  foomatic-rip building under Mac OS X, mainly by replacing
	  functions which are GNU-only.

2009-02-02  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: When foomatic-rip looked for JCL options in the
	  binary output of the driver to merge them with JCL options from
	  the PPD file, it read binary data into a C string, which causes
	  problems when this data contains zeroes. Finally fixes Ubuntu bug
	  LP: #303691.

2009-01-29  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: If there were very many JCL lines in the driver's
	  output or coming together by JCL options, the JCL merging
	  process (kid4) segfaulted (Ubuntu bug LP: #321164,
	  https://launchpad.net/bugs/321164).

2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.0.

2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Custom JCL options were not inserted correctly
	  (thanks to Bin Li from Ricoh for reporting this). Fixed also
	  that "None" as argument for a string or password option is
	  considered as the empty string.

	* options.c: String and password option settings got inserted into
	  the command line or the PostScript code with the "Custom."
	  prefix (thanks to Bin Li from Ricoh for reporting this). Fixed
	  also a segmentation fault due to missing initialization of
	  components of the param_t data structure by the
	  option_add_custom_param_from_string() function. Removed also
	  some unneeded free() calls.

2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE: Version 4.0.0.
