@@ -1,6 +1,7 @@
 2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
 	* renderer.c: Fixed several bugs in the argument replacements in
 	massage_gs_commandline.
+	* foomaticrip.c: Use "gspath" and "echopath" from the config file.
 
 2009-02-09  Lars Uebernickel <larsuebernickel@gmx.de>
 
